2011-06-27  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.21.1
	* Makefile.am (RELEASE): Set.
	* configure, Makefile.in: Regenerate.

2011-06-24  Alan Modra  <amodra@gmail.com>

	PR ld/12921
	* elf.c (assign_file_positions_for_load_sections): Don't align
	sh_offset for all SHT_NOBITS sections here, just .tbss sections
	that don't get a PT_LOAD.

2011-06-22  Alan Modra  <amodra@gmail.com>

	* elflink.c (_bfd_elf_merge_symbol): Allow type changes for
	plugin symbols.  Fix segfault on linker scrip defined syms.

2011-05-29  Alan Modra  <amodra@gmail.com>

	Apply from mainline
	2011-05-26  Alan Modra  <amodra@gmail.com>
	* elf-bfd.h (SYMBOL_REFERENCES_LOCAL): Remove most of comment.
	* elflink.c (_bfd_elf_symbol_refs_local_p): Expand
	local_protected comment.

	2011-05-23  Alan Modra  <amodra@gmail.com>
	PR 12763
	* elf.c (assign_file_positions_for_load_sections): Set sh_offset for
	.tbss, and page align same for all SHT_NOBITS sections.

	2011-05-23  Nick Clifton  <nickc@redhat.com>
	* elf-m10300.c (mn10300_elf_mkobject): New function.
	(bfd_elf32_mkobject): Define.

	2011-05-21  Alan Modra  <amodra@gmail.com>
	PR 12763
	* elf.c (_bfd_elf_make_section_from_shdr): Set up TLS section LMAs
	from PT_TLS header.
	(_bfd_elf_map_sections_to_segments): Don't create a final PT_LOAD
	segment if just for .tbss.
	(assign_file_positions_for_load_sections): Don't report "can't
	allocate in segment" errors for .tbss.
	(assign_file_positions_for_non_load_sections): Don't set p_filesz
	from SHT_NOBITS section filepos.

	2011-05-17  Alan Modra  <amodra@gmail.com>
	PR ld/12760
	* coff-aux.c (coff_m68k_aux_link_add_one_symbol): Adjust "notice" call.
	* elflink.c (elf_link_add_object_symbols): Likewise.
	* linker.c (_bfd_generic_link_add_one_symbol): Likewise.

	2011-05-16  Alan Modra  <amodra@gmail.com>
	* linker.c (_bfd_generic_link_add_one_symbol): Don't init u.undef.weak.

	2011-05-12  Jan Kratochvil  <jan.kratochvil@redhat.com>
	* config.in: Regenerated.